# alt-urls-discord-bot

./: Cargo.toml  README.md  flake.nix
src/: links.rs  main.rs  reddit.rs
src/interactions/: mod.rs  msg_command.rs  slash_command.rs
src/links/: mod.rs  reddit.rs
