[package]
name = "alt-urls-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.5"
regex_static = "0.1.1"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
